<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ProgressBar
        android:id="@+id/pbLoadingIndicator"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/progress_bar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvFetchingData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pb_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pbLoadingIndicator"
        app:layout_constraintStart_toStartOf="@+id/pbLoadingIndicator"
        app:layout_constraintTop_toBottomOf="@+id/pbLoadingIndicator"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dToolbar">

        <LinearLayout
            android:id="@+id/detailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">

            <include layout="@layout/section_ticker" />

            <WebView
                android:id="@+id/highChartsWebView"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="310dp" />

            <TextView
                android:id="@+id/portfolioHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/portfolio"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <include layout="@layout/section_portfolio" />

            <TextView
                android:id="@+id/statsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/stats"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <GridView
                android:id="@+id/statsGridView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginEnd="10dp"
                android:columnWidth="120dp"
                android:numColumns="3"
                android:stretchMode="spacingWidthUniform"
                android:verticalSpacing="24dp" />

            <TextView
                android:id="@+id/aboutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/about"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <include
                layout="@layout/section_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/newsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/news"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <include
                layout="@layout/section_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="4dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newsRecyclerView"
                android:nestedScrollingEnabled="false"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>